2018-08-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* Variable height selection lists. new_listlayoutmanager.height().

0.7
2018-08-12  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement XDND protocol, version 5.
0.6

2018-07-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement a custom font rendering API.
0.5

2018-05-15  Sam Varshavchik  <mrsam@courier-mta.com>

	* Font and color picker display elements.

2018-05-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* combobox/editable_comboboxlayoutmanager_impl.C: Size the input
	field large enough to display the cursor after the largest item
	without scrolling.

	* fonts: bug fixes, improve error reporting.

	* includes/x/w/stop_message.H (stop_message_config): add widthmm
	to have the message automatically wrap. Use this to improve appearance
	of caught exceptions.

	* includes/x/w/custom_comboboxlayoutmanager.H: add synchronized_columns,
	that gets copied to the popup's list layout manager, making it possible
	to create multiple combo-boxes with the same width.

	* editor_impl.C (process_keypress): \n in a single line input field
	validates its contents.

	* includes/x/w/rgb.H: Define standard HTML 3.2 colors.

2018-04-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/elementobj.H: added stop_message() and
	exception_message() to x::w::element.

	* includes/x/w/input_field.H (set_validator): Replaced the text_param
	parameter to validator callbacks with x::w::input_field, and the
	callback is responsible for reporting an error, in some way; perhaps
	by calling the input_field's stop_message().


2018-04-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* text_param.C (operator): Treat the string as encoded in the
	current local's charset, and not UTF-8.

	* input_field.C (set): Treat the string as encoded in the current
	locale's character set, and not UTF-8.

2018-04-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* panelayoutmanager/panelayoutmanager_impl.C (remove_pane): Removal