@@ -1,0 +1,11 @@
+<optclass name="testprogramoptions">
+  <option>
+    <name>test</name>
+    <type>bool</type>
+    <default>false</default>
+    <opt>t</opt>
+    <longopt>test</longopt>
+    <descr>Invoked by make check</descr>
+  </option>
+  <defaultoptions />
+</optclass>
