@@ -1,3 +1,8 @@
+2018-08-25  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Multi-column selection lists have optional column borders
+	separating them.
+
 2018-08-23  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Variable height selection lists. new_listlayoutmanager.height().
